genera el excel sin segmentacion
