# storage/api-docs/api-docs.json
@@ -1,16 +1,22 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "My API",
-        "description": "This is a sample API",
+        "title": "API Documentation",
+        "description": "Esta es la documentación de la API para tu proyecto",
+        "contact": {
+            "email": "tu-email@ejemplo.com"
+        },
         "version": "1.0.0"
     },
     "paths": {
         "/api/test": {
             "get": {
+                "tags": [
+                    "Bigcommerce"
+                ],
                 "summary": "Test API",
                 "description": "Returns a test message",
-                "operationId": "eeb6ee94d00f167a17cb021f22d483bc",
+                "operationId": "0ec11bb1ab1b98ca17413cfb342c6e83",
                 "responses": {
                     "200": {
                         "description": "Successful response",
@@ -33,6 +39,110 @@
                     }
                 }
             }
+        },
+        "/api/process-excel": {
+            "post": {
+                "tags": [
+                    "Excel"
+                ],
+                "summary": "Process an Excel file and export the specified number of columns to a CSV and a TXT file",
+                "operationId": "4ea2cebd715c7060e7e634d32de4f032",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "path",
+                                    "outputCsv",
+                                    "outputTxt",
+                                    "sheet",
+                                    "columns"
+                                ],
+                                "properties": {
+                                    "path": {
+                                        "type": "string",
+                                        "example": "/ruta/al/archivo.xlsx"
+                                    },
+                                    "outputCsv": {
+                                        "type": "string",
+                                        "example": "/ruta/al/output.csv"
+                                    },
+                                    "sheet": {
+                                        "type": "string",
+                                        "example": "Sheet1"
+                                    },
+                                    "columns": {
+                                        "type": "integer",
+                                        "example": 540
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "El archivo Excel ha sido procesado correctamente.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "El archivo Excel ha sido procesado correctamente."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Validation error message"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Error message"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "Bigcommerce",
+            "description": "Bigcommerce"
+        },
+        {
+            "name": "Excel",
+            "description": "Excel"
+        }
+    ]
 }
